# learn-llm

./: .gitignore  PEFT_Finetune_tagger.ipynb  README.md  bootstrap.sh  pyproject.toml  run_app.sh  run_pipeline.sh
api/: api.py
api/controller/: chat.py
api/schema/: chat_api.py
api/service/: queryservice.py  retrievalservice.py
client/: app.py
client/component/: apirequest.py
client/config/: constants.py
client/schema/: api.py
deployment/: docker-compose.yaml
pipeline/: pipeline.py
pipeline/component/: ingest.py
pipeline/config/: constants.py  loggerconfig.py
pipeline/data/: dataloader.py
pipeline/model/: huggingface_model.py
pipeline/schema/: data.py  es_data.py
src/learn_llm/: playground.py
src/learn_llm/controller/: pipeline.py
src/learn_llm/data/: dataloader.py
src/learn_llm/model/: huggingface_model.py
src/learn_llm/pipeline/: chunk.py  ingest.py
src/learn_llm/schema/: data.py
utils/: data_helper.py
